tests/NormalTests/paczka1/small_fuzzy/88585014.err
Error in line 4: fjisvZa A424 38,8
Error in line 5: 5XI5XbJ A424 36,8
Error in line 15: A424 A961 24,9
